--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "test tool compare (jest vs node:test)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --test"
   },
   "keywords": [
     "jest",
